--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"hz serve --dev\" \"ng serve --open\" ",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -35,6 +35,7 @@
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "concurrently": "^3.5.1",
     "typescript": "~2.4.2"
   }
 }
